tests/integration/snapshots/integration__conformance__n_structure_end_array.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `]`
 --> stdin:1:1
  |
1 | ]
  | ^
